mycheckout-infrastructure/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /api/checkout
        pathType: Prefix
        backend:
          service:
            name: checkout-srv
            port:
              number: 8080
      - path: /api/statistics
        pathType: Prefix
        backend:
          service:
            name: statistics-srv
            port:
              number: 8080
      - path: /api/orion
        pathType: Prefix
        backend:
          service:
            name: orion-srv
            port:
              number: 8080
